--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,30 @@
-/node_modules
-/build
-/dist
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
+# dotenv environment variable files
 .env
+.env.development.local
+.env.test.local
+.env.production.local
 .env.local
+
+# IDEs
+.vscode
+.idea
+
+# Dependency directories
+node_modules/
+
+# Package Caches
+*.tsbuildinfo
+.npm
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
