--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {},
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon index.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,7 +18,10 @@
     "fastify-cookie": "^5.6.1",
     "jsonwebtoken": "^8.5.1",
     "nanoid": "^3.3.3",
+    "nodemon": "^2.0.16",
     "pg": "^8.7.3",
-    "prisma": "^3.12.0"
+    "prisma": "^3.12.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
