--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.14.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.1",
@@ -20,8 +21,10 @@
     "nanoid": "^3.3.3",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
-    "prisma": "^3.12.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
+  },
+  "devDependencies": {
+    "prisma": "^3.14.0"
   }
 }
